@@ -1,2 +1,3 @@
 code.google.com
+golang.org
 github.com
